logic for coupons and css fix for overflow on cart

--- a/styles/_cart.scss
+++ b/styles/_cart.scss
@@ -4,7 +4,7 @@
     }
 }
 .content.jsx-2956695818{
-    overflow-x: scroll;
+    overflow-x: auto;
 }
 .card {
     transition: height ease-in-out 1s !important;
